# waybar_github_notifications

./: .gitignore  README.md  gh_notifications.sh  pyproject.toml  waybar_gh_notifications.py
